@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-03T16:20:23Z",
-  "count_outdated" : 307,
-  "uniques_outdated" : 169,
-  "count" : 328,
-  "uniques" : 184,
+  "timestamp" : "2022-06-04T01:09:28Z",
+  "count_outdated" : 319,
+  "uniques_outdated" : 178,
+  "count" : 339,
+  "uniques" : 192,
   "clones" : [
-    {
-      "timestamp": "2022-05-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 12 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 9 ]
-    },
     {
       "timestamp": "2022-05-21T00:00:00Z",
       "count": 2,
