@@ -1,12 +1,7 @@
 {
-  "count": 21,
+  "count": 20,
   "uniques": 7,
   "clones": [
-    {
-      "timestamp": "2022-05-20T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-21T00:00:00Z",
       "count": 2,
